# FreqCounter

./: CMakeLists.txt  build.sh  readme.md
core/: CMakeLists.txt
core/include/: FreqCounter.hpp  Logger.hpp  Settings.hpp  SyncPolicy.hpp  ThreadPool.hpp  Trie.hpp
core/src/: Logger.cpp  Settings.cpp  Trie.cpp
examples/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test.cpp
